fix alignment of wp-icons

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -445,13 +445,13 @@ footer {
 		}
 		border: none;
 		width: 100%;
-		ul {
+		.mg-wpsi {
 			width: 100%;
 			display: table;
 			clear: both;
 			li {
 				display: table-cell;
-				float: none !important;
+				float: none;
 			}
 		}
 	}
